// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineCurrentTimeContainer /> должен отрисовать полоску для 08:00:00 1`] = `
<TimelineCurrentTime
  currentTime={1505970000000}
  timelineDate={1505941200000}
/>
`;

exports[`<TimelineCurrentTimeContainer /> должен отрисовать полоску для 15:01:00 1`] = `
<TimelineCurrentTime
  currentTime={1505995260000}
  timelineDate={1505941200000}
/>
`;

exports[`<TimelineCurrentTimeContainer /> должен отрисовать полоску для 23:00:00 1`] = `
<TimelineCurrentTime
  currentTime={1506024000000}
  timelineDate={1505941200000}
/>
`;

exports[`<TimelineCurrentTimeContainer /> не должен отрисовать полоску для 00:00:00 1`] = `""`;

exports[`<TimelineCurrentTimeContainer /> не должен отрисовать полоску для 00:00:01 1`] = `""`;

exports[`<TimelineCurrentTimeContainer /> не должен отрисовать полоску для 07:59:59 1`] = `""`;
